[Task 3-1] Confirmation Dialog

--- a/project1/webapp/view/Main.view.xml
+++ b/project1/webapp/view/Main.view.xml
@@ -22,7 +22,7 @@
                     <ToolbarSpacer/>
                     <Button
                         text="{i18n>buttonDeleteRecord}"
-                        press="onDeleteRecord">
+                        press=".onOpenDialog">
                         <layoutData>
                             <FlexItemData growFactor="1" />
                         </layoutData>
