[Task 3-2] Record creation

--- a/project1/webapp/view/Main.view.xml
+++ b/project1/webapp/view/Main.view.xml
@@ -15,7 +15,7 @@
                 <Toolbar>
                     <Button 
                         text="{i18n>buttonAddRecord}"
-						press="onAddRecord">
+						press=".onOpenBookCreationDialog">
                     </Button>
                     <ToolbarSpacer/>
                     <Button
