[Task 3-3] Formatter & i18n file

--- a/project1/webapp/view/Main.view.xml
+++ b/project1/webapp/view/Main.view.xml
@@ -95,7 +95,7 @@
                                     parts: [
                                         'booksModel>ReleaseDate'
                                     ],
-                                    formatter: 'Formatter.rormatDate.bind($controller)'
+                                    formatter: 'Formatter.formatDate.bind($controller)'
                             }"/>
                         <ObjectNumber
                             number="{booksModel>AvailableQuantity}"
