--- a/project1/webapp/view/Main.view.xml
+++ b/project1/webapp/view/Main.view.xml
@@ -3,120 +3,18 @@
 	xmlns:core="sap.ui.core"
     xmlns="sap.m">
     <Page id="page" title="{i18n>booksListTitle}">
-        <Table
-            id="booksList"
-            width="auto"
-            mode="MultiSelect"
-            selectionChange=".onBooksTableSelectedItemsChanged"
-            items="{
-                path: 'booksModel>/currentBooks'
-            }">
-            <headerToolbar>
-                <Toolbar>
-                    <Button 
-                        text="{i18n>buttonAddRecord}"
-						press=".onOpenBookCreationDialog">
-                    </Button>
-                    <ToolbarSpacer/>
-                    <Button
-                        text="{i18n>buttonDeleteRecord}"
-                        enabled="{= Boolean(${booksModel>/booksSelectedItems}.length)}"
-                        press=".onOpenDeletionRecordConfirmationDialog">
-                    </Button>
-                    <Input
-                        width="50%"
-                        valueLiveUpdate="true"
-                        liveChange=".onSetSearchedName"/>
-                    <ToolbarSpacer/>
-                    <ComboBox
-                        selectedKey="0"
-                        selectionChange=".onSetSelectedGenre"
-                        items="{
-                            path: 'booksModel>/genres'
-                        }">
-                        <core:Item key="{booksModel>key}" text="{booksModel>title}" />
-                    </ComboBox>
-                    <ToolbarSpacer/>
-                    <Button text="{i18n>buttonFilter}" press="onFilterTable" />
-                </Toolbar>
-            </headerToolbar>
-            <columns>
-                <Column>
-                    <Text text="{i18n>columnName}" />
-                </Column>
-                <Column
-                    minScreenWidth="Small"
-                    demandPopin="true">
-                    <Text text="{i18n>columnAuthor}" />
-                </Column>
-                <Column
-                    minScreenWidth="Small"
-                    demandPopin="true">
-                    <Text text="{i18n>columnGenre}" />
-                </Column>
-                <Column
-                    minScreenWidth="Small"
-                    demandPopin="true">
-                    <Text text="{i18n>columnReleaseDate}" />
-                </Column>
-                <Column
-                    minScreenWidth="Small"
-                    demandPopin="true">
-                    <Text text="{i18n>columnAvailableQuantity}" />
-                </Column>
-                <Column
-                    hAlign="End"
-                    width="10em"
-                    minScreenWidth="Small"
-                    demandPopin="true">
-                    <Text text="{i18n>columnActions}" />
-                </Column>
-            </columns>
-            <items>
-                <ColumnListItem>
-                    <cells>
-                        <FlexBox>
-                            <ObjectIdentifier 
-                                visible="{= !${booksModel>isEditable}}" 
-                                title="{booksModel>Name}"
-                                />
-                            <Input
-                                visible="{booksModel>isEditable}"
-                                value="{booksModel>Name}"
-                                />
-                        </FlexBox>
-                        <Text text="{booksModel>Author}" />
-                        <Text text="{booksModel>Genre/title}" />
-                        <Text
-                            core:require="{
-                                Formatter: 'project1/model/formatter'
-                            }"
-                            text="{i18n>cellPublished}: {
-                                    parts: [
-                                        'booksModel>ReleaseDate'
-                                    ],
-                                    formatter: 'Formatter.formatDate'
-                            }"/>
-                        <ObjectNumber
-                            number="{booksModel>AvailableQuantity}"
-                            emphasized="false"/>
-                        <FlexBox justifyContent="{= !${booksModel>isEditable} ? 'End' : 'SpaceBetween'}">
-                            <Button 
-                                text="{i18n>buttonEdit}"
-                                visible="{= !${booksModel>isEditable}}"
-                                press="onEditTitle"/>
-                            <Button 
-                                text="{i18n>buttonSave}"
-                                visible="{booksModel>isEditable}"
-                                press="onSaveTitle"/>
-                            <Button 
-                                text="{i18n>buttonCancel}"
-                                visible="{booksModel>isEditable}"
-                                press="onCancelUpdateTitle"/>
-                        </FlexBox>
-                    </cells>
-                </ColumnListItem>
+        <IconTabBar id="idIconTabBarNoIcons">
+		    <items>
+                <IconTabFilter text="{i18n>tabJSONModel}" key="jsonTab">
+                    <core:Fragment fragmentName="project1.view.fragments.JSONModelTab"/>
+                </IconTabFilter>
+                <IconTabFilter text="{i18n>tabV2Model}" key="v2Tab">
+                    <core:Fragment fragmentName="project1.view.fragments.V2ModelTab"/>
+                </IconTabFilter>
+                <IconTabFilter text="{i18n>tabV4Model}" key="v4Tab">
+                    <core:Fragment fragmentName="project1.view.fragments.V4ModelTab"/>
+                </IconTabFilter>
             </items>
-        </Table>
+        </IconTabBar>
     </Page>
 </mvc:View>
